# token-agent

./: .gitignore  Cargo.toml  LICENSE  README.MD  design.txt  example_config.yaml  project_structure.txt
.github/workflows/: release.yml
deploy/: supervisord.conf  token-agent.service
deploy/docker/: Dockerfile  docker-compose.yml
deploy/docker/grafana/: grafana.db
deploy/docker/grafana/dashboards/: token-agent-dashboard.json
deploy/docker/prometheus/: prometheus.yml
deploy/docker/wiremock/mappings/: metadata-token.json  sts-token.json
examples/: google_metadata_token.yaml  google_sts_token_exchange.yaml
src/: lib.rs  main.rs
src/cache/: mod.rs  token.rs  token_cache.rs  token_context.rs
src/config/: loader.rs  mod.rs  proc_initiateor.rs  proc_loader.rs  proc_validator.rs  settings.rs  sinks.rs  sources.rs  types.rs
src/dag/: scheduler.rs
src/endpoints/: metrics.rs  mod.rs  udp.rs
src/helpers/: time.rs
src/observability/: metrics.rs  mod.rs  routes.rs  service_resources_metrics.rs
src/parser/: parser.rs  parser_2.rs  parser_old.rs  template.rs
src/resilience/: retry.rs
src/server/: server.rs
src/sinks/: file_sink.rs  manager.rs  metrics_sink.rs  mod.rs  sink_file.rs  sink_file_cache.rs  sink_http.rs  sink_http_cache.rs  sink_uds.rs  sink_uds_cache.rs
src/sources/: builder_in_order.rs  fetch.rs  http.rs  metadata.rs  mod.rs  oauth2.rs
src/sources/executor/: mod.rs  token_fetch.rs  token_invalidate.rs
src/tests/: atomic_file_propogation.rs  chained_fetch_and_retry.rs  expiration_and_cache.rs  mod.rs
src/tests/common/: mod.rs
src/tests/examples/: config_validation.rs  google_metadata_token.rs  google_sts_token_exchange.rs  mod.rs
src/utils/: channel.rs  config_loader.rs  constants.rs  logging.rs  mod.rs
