[package]
name = "token-agent"
version = "0.1.0"
edition = "2021"
authors = ["Aleksandr Nikitin"]
description = "Token service for fetching and caching multiple token sources (HTTP, Metadata, OAuth2) with configurable YAML."
license = "MIT"
repository = "https://github.com/AleksandrNi/token-agent"

[package.metadata.deb]
maintainer = "Aleksandr Nikitin"
license-file = ["LICENSE", "0"]
section = "net"
priority = "optional"
depends = "systemd, libc6 (>= 2.31)"
extended-description = "Configurable Token Fetching & Propagation Service"
assets = [
    ["target/release/token-agent", "usr/bin/", "755"],
    ["deploy/token-agent.service", "lib/systemd/system/", "644"]
]
systemd-units = { enable = true }

[profile.release]
opt-level = "z"          # prioritize size over speed ("s" is also OK)
lto = true               # enables whole-program optimization
codegen-units = 1        # better cross-crate optimization
panic = "abort"          # removes unwinding code
strip = true             # remove debug symbols automatically

[profile.test]
opt-level = 1
debug = true
overflow-checks = true


[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "fs", "signal"] }

# HTTP client
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }

# JSON serialization / parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0"
base64 = "0.22"

# Error handling
anyhow = "1.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json" ,"time"] }


chrono = { version = "0.4.42", features = ["serde"] }
http = "1.3.1"
regex = "1.12.2"
prometheus = "0.14.0"
clap = { version = "4.5.50", features = ["derive", "env"] }
http-serde = "2.1.1"
axum = "0.8.5"
# rand = "0.9.2"
sysinfo = "0.36.1"

[dev-dependencies]
httpmock = "0.8.2"
tempfile = "3"
serial_test = "3"


